<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="385dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restartButton"
        android:layout_width="154dp"
        android:layout_height="75dp"
        android:layout_marginTop="650dp"
        android:background="@color/found"
        android:text="@string/restart"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/del"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/del"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/m"
        app:layout_constraintTop_toBottomOf="@+id/l" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/m"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/m"
        app:layout_constraintStart_toEndOf="@+id/n"
        app:layout_constraintTop_toBottomOf="@+id/k" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/n"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/n"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/b"
        app:layout_constraintTop_toBottomOf="@+id/j" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/b"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/v"
        app:layout_constraintTop_toBottomOf="@+id/h" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/v"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/v"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/c"
        app:layout_constraintTop_toBottomOf="@+id/g" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/c"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/c"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/x"
        app:layout_constraintTop_toBottomOf="@+id/f" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/x"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/x"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/z"
        app:layout_constraintTop_toBottomOf="@+id/d" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/z"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/z"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/enter"
        app:layout_constraintTop_toBottomOf="@+id/s" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="5dp"
        android:text="@string/enter"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/l"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/l"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/k"
        app:layout_constraintTop_toBottomOf="@+id/o" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/k"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/k"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/j"
        app:layout_constraintTop_toBottomOf="@+id/i" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/j"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/j"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/h"
        app:layout_constraintTop_toBottomOf="@+id/u" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/h"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/h"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/g"
        app:layout_constraintTop_toBottomOf="@+id/y" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/g"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/g"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/f"
        app:layout_constraintTop_toBottomOf="@+id/t" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/f"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/f"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/d"
        app:layout_constraintTop_toBottomOf="@+id/r" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/d"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/d"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/s"
        app:layout_constraintTop_toBottomOf="@+id/e" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/s"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/s"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/a"
        app:layout_constraintTop_toBottomOf="@+id/w" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/a"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/a"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/p"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/p"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/o"
        app:layout_constraintStart_toEndOf="@+id/o" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/o"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/o"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/i"
        app:layout_constraintStart_toEndOf="@+id/i" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/i"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/i"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/u"
        app:layout_constraintStart_toEndOf="@+id/u" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/u"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/u"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/y"
        app:layout_constraintStart_toEndOf="@+id/y" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/y"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/y"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/t"
        app:layout_constraintStart_toEndOf="@+id/t" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/t"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/t"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/r"
        app:layout_constraintStart_toEndOf="@+id/r" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/r"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/r"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/e"
        app:layout_constraintStart_toEndOf="@+id/e" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/e"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="10dp"
        android:text="@string/e"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/w"
        app:layout_constraintStart_toEndOf="@+id/w" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/w"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/napit"
        android:padding="5dp"
        android:text="@string/w"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/q"
        app:layout_constraintStart_toEndOf="@+id/q" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/q"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/napit"
        android:padding="5dp"
        android:text="@string/q"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defView" />

    <TextView
        android:id="@+id/defView"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>